Deprecate sharing cs3 backends (#8478)
Signed-off-by: Jörn Friedrich Dreyer <jfd@butonic.de>

--- a/services/_includes/adoc/sharing_configvars.adoc
+++ b/services/_includes/adoc/sharing_configvars.adoc
@@ -4,7 +4,7 @@
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-02-19-11-04-24]
+[#deprecation-note-2024-02-19-11-50-51]
 [caption=]
 .Deprecation notes for the sharing service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -283,7 +283,7 @@ a| [subs=-attributes]
 a| [subs=-attributes]
 ++jsoncs3 ++
 a| [subs=-attributes]
-Driver to be used to persist shares. Supported values are 'jsoncs3', 'json', 'cs3' and 'owncloudsql'.
+Driver to be used to persist shares. Supported values are 'jsoncs3', 'json', 'cs3' (deprecated) and 'owncloudsql'.
 
 a|`SHARING_USER_JSONCS3_PROVIDER_ADDR` +
 
@@ -442,7 +442,7 @@ a| [subs=-attributes]
 a| [subs=-attributes]
 ++jsoncs3 ++
 a| [subs=-attributes]
-Driver to be used to persist public shares. Supported values are 'jsoncs3', 'json' and 'cs3'.
+Driver to be used to persist public shares. Supported values are 'jsoncs3', 'json' and 'cs3' (deprecated).
 
 a|`SHARING_PUBLIC_JSON_FILE` +
 
