--- a/services/_includes/adoc/sharing_configvars.adoc
+++ b/services/_includes/adoc/sharing_configvars.adoc
@@ -4,7 +4,7 @@
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-02-21-09-11-38]
+[#deprecation-note-2024-02-21-09-22-22]
 [caption=]
 .Deprecation notes for the sharing service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -275,6 +275,16 @@ a| [subs=-attributes]
 ++false ++
 a| [subs=-attributes]
 Disables the loading of user's group memberships from the reva access token.
+
+a|`OCIS_ENABLE_RESHARING` +
+`SHARING_ENABLE_RESHARING` +
+
+a| [subs=-attributes]
+++bool ++
+a| [subs=-attributes]
+++true ++
+a| [subs=-attributes]
+Changing this value is NOT supported. Enables the support for resharing.
 
 a|`SHARING_USER_DRIVER` +
 
